--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 title: Network Programming
 description: Các ví dụ và tài liệu tham khảo môn học Lập trình mạng - IT4060 - HUST
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
