--- a/samples/EventSelectServer/MultiThreadEventSelectServer/MultiThreadEventSelectServer.vcxproj.filters
+++ b/samples/EventSelectServer/MultiThreadEventSelectServer/MultiThreadEventSelectServer.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="TestClient.cpp">
+    <ClCompile Include="MultiThreadEventSelectServer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
